# dpapi-ng

./: .coveragerc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.ln  README.md  jordan.py  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yml
build_helpers/: lib.sh  run-ci.sh
src/dpapi_ng/: __init__.py  _asn1.py  _blob.py  _client.py  _crypto.py  _dns.py  _epm.py  _gkdi.py  _isd_key.py  _pkcs7.py  _security_descriptor.py  _version.py  get_key.py
src/dpapi_ng/_rpc/: __init__.py  _auth.py  _bind.py  _client.py  _epm.py  _isd_key.py  _pdu.py  _request.py  _verification.py
tests/: __init__.py  conftest.py  test_asn1.py  test_blob.py  test_client.py  test_crypto.py  test_epm.py  test_gkdi.py  test_isd_key.py  test_security_descriptor.py
tests/_rpc/: test_bind.py  test_epm.py  test_pdu.py  test_request.py  test_verification.py
tests/data/: dpapi_ng_blob  ecdh_key  ffc_dh_key  ffc_dh_parameters  group_key_envelope  kdf_sha1_dh.json  kdf_sha1_ecdh_p256.json  kdf_sha1_ecdh_p384.json  kdf_sha1_nonce.json  kdf_sha256_dh.json  kdf_sha256_ecdh_p256.json  kdf_sha256_ecdh_p384.json  kdf_sha256_nonce.json  kdf_sha384_dh.json  kdf_sha384_ecdh_p256.json  kdf_sha384_ecdh_p384.json  kdf_sha384_nonce.json  kdf_sha512_dh.json  kdf_sha512_ecdh_p256.json  kdf_sha512_ecdh_p384.json  kdf_sha512_nonce.json  seed_key.json
tests/integration/: README.md  Vagrantfile  inventory.yml  main.yml  requirements.yml  run_test.yml  tests.yml
tests/integration/files/: ConvertFrom-DpapiNgBlob.ps1  ConvertTo-DpapiNgBlob.ps1  New-KdsRootKey.ps1  generate_seed_keys.py  sp800_56a_concat.ps1  sp800_56a_concat.py
tests/integration/templates/: krb5.conf.j2  test_integration.py
